sending-email-using-node-mailer

--- a/.env
+++ b/.env
@@ -1,2 +1,4 @@
 MONGO_URL=mongodb+srv://jayamithpriyankara:G35ZhdvaPwVVsU7i@blog-project-v1.xda7opf.mongodb.net/blog-project-v1?retryWrites=true&w=majority&appName=blog-project-v1
 JWT_KEY=fgghdrtstyse3$^$#$@DDAFgdggzsdfsxd.//fyts4
+GMAIL_USER=jayamithpriyankara6@gmail.com
+GMAIL_PASSWORD=fikh mprv dqya cqoj
