--- a/.env
+++ b/.env
@@ -2,3 +2,6 @@ MONGO_URL=mongodb+srv://jayamithpriyankara:G35ZhdvaPwVVsU7i@blog-project-v1.xda7
 JWT_KEY=fgghdrtstyse3$^$#$@DDAFgdggzsdfsxd.//fyts4
 GMAIL_USER=jayamithpriyankara6@gmail.com
 GMAIL_PASSWORD=fikh mprv dqya cqoj
+CLOUDINARY_CLOUD_NAME=dvkcnpumk
+CLOUDINARY_APIKEY=516149919248384
+CLOUDINARY_API_SECRET=nuODJzJ7dmvzun5H_iHyipWqlkI
